--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
       <html lang="fr">
 
         <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="style.css">
+            <script src="https://kit.fontawesome.com/6f339f6f72.js" crossorigin="anonymous"></script>
+            <title> Ohmyfood!</title>
 
         </head>
 
@@ -16,5 +21,5 @@
 
 
         <footer>
-            
+
         </footer>
