--- a/index.html
+++ b/index.html
@@ -5,12 +5,27 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="style.css">
-            <script src="https://kit.fontawesome.com/6f339f6f72.js" crossorigin="anonymous"></script>
+            <script src="https://kit.fontawesome.com/24283e3720.js" crossorigin="anonymous"></script>
             <title> Ohmyfood!</title>
 
         </head>
 
         <body>
+            <header>
+               
+                <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home"> 
+                  
+              </header>
+
+              <section id="search">
+                <form>
+                    <i class="fas fa-map-marker-alt"></i>
+                    <input class="searchfield"  type="search" placeholder="Paris, Belleville"/>
+                </form>
+                <h1 class="search-title">Réservez le menu qui vous convient</h1>
+                <h2 class="search-subtitle">Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
+                <button class="search-button">Explorer nos restaurants</button>
+              </section> 
 
 
 
