--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="style.css">
             <script src="https://kit.fontawesome.com/24283e3720.js" crossorigin="anonymous"></script>
+            
             <title> Ohmyfood!</title>
 
         </head>
@@ -26,6 +27,23 @@
                 <h2 class="search-subtitle">Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
                 <button class="search-button">Explorer nos restaurants</button>
               </section> 
+              <section class="menu-item">
+              <div class="functionning">
+                <h2>Fonctionnement</h2>
+                <ul>
+                  <li class="btn button_fonction">
+                    <div class="list_icon"><i class="fas fa-mobile-alt"></i><h3>Choississez un restaurant</h3></div>
+                  </li>
+                  <li class="btn button_fonction">
+                    <div class="list_icon"><i class="fas fa-list-ul"></i><h3>Composez votre menu</h3></div>
+                  </li>
+                  <li class="btn button_fonction">
+                    <div class="list_icon"><i class="fas fa-store"></i><h3>Dégustez au restaurant</h3></div>
+                  </li>
+                </ul>
+      
+              </div>
+            </section> 
 
 
 
@@ -36,5 +54,14 @@
 
 
         <footer>
+            <h2>ohmyfood</h2>
+
+      <ul class="list-footer">
+        <li><div><i class="fas fa-utensils"></i>Proposer un restautant</div></li>
+        <li><div><i class="fas fa-hands-helping"></i>Devenir partenaire</div></li>
+        <li>Mentions légales</li>
+        <li><a href="mailto:contact@example.com">Contact</a></li>
+      </ul>
+    </footer>
 
         </footer>
