--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="restaurants-cards">
                         <div class="box-restaurant">
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="image-restaurant"/>
-                            <a href="./lapalettedugout.html">
+                            <a href="lapalettedugout.html">
                                 <h3 class="box-restaurant-title">La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </a>    
@@ -61,7 +61,7 @@
 
                         <div class="box-restaurant">
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="image-restaurant"/>
-                            <a href="./lanoteenchantee.html">
+                            <a href="lanoteenchantee.html">
                                 <h3 class="box-restaurant-title">La note enchantée</h3>
                                 <p>Charonne</p>
                             </a>
