insertion header et footer

--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -12,3 +12,38 @@
             <title> La note enchantéé</title>
 
         </head>
+
+        <header>
+
+          <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home"> 
+
+
+
+        </header>
+
+
+        <body>
+
+
+
+
+
+
+        </body>
+
+        <footer>
+          <h2>ohmyfood</h2>
+
+          <ul class="list-footer">
+            <li><div><i class="fas fa-utensils"></i>Proposer un restautant</div></li>
+            <li><div><i class="fas fa-hands-helping"></i>Devenir partenaire</div></li>
+            <li>Mentions légales</li>
+            <li><a href="mailto:contact@example.com">Contact</a></li>
+          </ul>
+
+
+
+
+        </footer>
+
+      </html>
