--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Shrikhand">
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
             <script src="https://kit.fontawesome.com/24283e3720.js" crossorigin="anonymous"></script>
             
             <title> Ohmyfood!</title>
@@ -31,14 +33,14 @@
               <div class="functionning">
                 <h2>Fonctionnement</h2>
                 <ul>
-                  <li class="btn button_fonction">
+                  <li class="button-fonction">
                     <div class="list_icon"><i class="fas fa-mobile-alt"></i><h3>Choississez un restaurant</h3></div>
                   </li>
-                  <li class="btn button_fonction">
-                    <div class="list_icon"><i class="fas fa-list-ul"></i><h3>Composez votre menu</h3></div>
+                  <li class=" button-fonction">
+                    <div class="list-icon"><i class="fas fa-list-ul"></i><h3>Composez votre menu</h3></div>
                   </li>
-                  <li class="btn button_fonction">
-                    <div class="list_icon"><i class="fas fa-store"></i><h3>Dégustez au restaurant</h3></div>
+                  <li class="button-fonction">
+                    <div class="list-icon"><i class="fas fa-store"></i><h3>Dégustez au restaurant</h3></div>
                   </li>
                 </ul>
       
