--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -15,6 +15,7 @@
 
         <header>
 
+          <a href="index.html"><i class="fas arrow fa-arrow-left"></i></a>
           <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home"> 
 
 
