--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -15,11 +15,8 @@
 
         <header>
 
+          <a href="index.html"><i class="fas arrow fa-arrow-left"></i></a>
           <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home"> 
-
-
-
-
 
         </header>
 
