--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -13,17 +13,37 @@
 
         </head>
 
+        <body>
+
         <header>
+
+
 
           <a href="index.html"><i class="fas arrow fa-arrow-left"></i></a>
           <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home"> 
-
-
-
+        
         </header>
 
+        <main>
 
-        <body>
+          <img id="background-image" class="menu-lanoteenchantee" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
+          <section id="menu-detail">
+            <h1 class="menu-title">La note enchantée</h1> 
+            <div class="heart">
+            <i class="far  fa-heart"></i>
+          </div>
+
+      
+
+
+
+
+
+
+
+        </main>
+
+
 
 
 
