--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -4,7 +4,7 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="CSS/style.css">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Shrikhand">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
             <script src="https://kit.fontawesome.com/24283e3720.js" crossorigin="anonymous"></script>
@@ -20,9 +20,17 @@
 
         </header>
 
-
-
         <body>
+
+          <main>
+
+            <img id="background-image" class="menu-lapalettedugout" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
+           
+            
+              <h1 class="restaurant-title">La palette du goût</h1> 
+              <div class="heart">
+              <i class="far fa-heart"></i>
+            </div>
 
 
 
