--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -4,7 +4,7 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="CSS/style.css">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Shrikhand">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
             <script src="https://kit.fontawesome.com/24283e3720.js" crossorigin="anonymous"></script>
@@ -15,12 +15,12 @@
 
         <header>
 
-          <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home"> 
+          <a href="index.html"><i class="fas arrow fa-arrow-left"></i></a>
+          <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home">
+           
+        </header> 
 
-
-        </header>
-
-
+  
         <body>
 
 
