--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -24,7 +24,7 @@
 
         <main>
 
-          <img id="background-image" class="menu-lanoteenchantee" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
+          <img id="background-image" class="menu-ledelicedessens" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délice des sens">
          
           
             <h1 class="restaurant-title">La note enchantée</h1> 
