--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         </head>
 
         <body>
+          
+          <div class="loader-wrapper">
+            <div class="loader">
+                <div class="loader-inner"></div>
+            </div>
             <header>
                
                 <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home"> 
@@ -123,4 +128,4 @@
       </ul>
     </footer>
 
-        </footer>
+      </html>
