--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -17,7 +17,7 @@
 
         <header>
 
-          <a href="index.html"><i class="fas arrow fa-arrow-left"></i></a>
+          <div class="back"><a href="index.html"><i class="fas arrow fa-arrow-left"></i></a></div>
           <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home">
            
         </header> 
@@ -149,14 +149,7 @@
   <button id="button-commander">Commander</button>
 
         </main>
-
-  
-        
-
-
-
-
-        </body>
+      </body>
 
 
         <footer>
