--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -17,7 +17,7 @@
 
         <header>
 
-          <a href="index.html"><i class="fas arrow fa-arrow-left"></i></a>
+          <div class="back"><a href="index.html"><i class="fas arrow fa-arrow-left"></i></a></div>
           <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home"> 
         
         </header>
@@ -32,7 +32,7 @@
             <i class="far fa-heart"></i>
           </div>
 
-          <section id="first">
+          <section id="entree">
           <h2 class="menu-title">Entrées</h2>
           <div class="choice">
               <div class="choice-1">
@@ -80,7 +80,7 @@
           </div>
         </section>
 
-        <section id="second">
+        <section id="dish">
         <h2 class="menu-title">Plats</h2>
         <div class="choice">
             <div class="choice-1">
@@ -118,7 +118,7 @@
             </div>
         </section>
 
-        <section class="third">
+        <section class="dessert">
           <h2 class="menu-title">Desserts</h2>
           <div class="choice">
               <div class="choice-1">
