--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -17,7 +17,7 @@
 
         <header>
 
-          <a href="index.html"><i class="fas arrow fa-arrow-left"></i></a>
+          <div class="back"><a href="index.html"><i class="fas arrow fa-arrow-left"></i></a></div>
           <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home"> 
 
         </header>
@@ -32,6 +32,7 @@
             <i class="far fa-heart"></i>
           </div>
 
+         <div class="menu -list">
           <section id="entree">
           <h2 class="menu-title">Entrées</h2>
           <div class="choice">
@@ -143,20 +144,14 @@
                 </div>
             </div>
           </div>
+        </div>
         </section>
-     
-  
-  <button id="button-commander">Commander</button>
+   
+        <button id="button-commander">Commander</button>
 
         </main>
-
-
        
-
-
-
-
-        </body>
+      </body>
 
 
         <footer>
