--- a/index.html
+++ b/index.html
@@ -35,31 +35,23 @@
                 <h2 class="search-subtitle">Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
                 <button class="search-button">Explorer nos restaurants</button>
               </section> 
-              <section class="menu-item">
-              <div class="functionning">
+              <aside id="functionning">
                 <h2>Fonctionnement</h2>
-                <ul>
-                  <li class="button-fonction">
-                    <div class="list_icon"><i class="fas fa-mobile-alt"></i><h3>Choississez un restaurant</h3></div>
-                  </li>
-                  <li class=" button-fonction">
-                    <div class="list-icon"><i class="fas fa-list-ul"></i><h3>Composez votre menu</h3></div>
-                  </li>
-                  <li class="button-fonction">
-                    <div class="list-icon"><i class="fas fa-store"></i><h3>Dégustez au restaurant</h3></div>
-                  </li>
-                </ul>
-      
-              </div>
-            </section> 
+                    <ol>
+                        <li><i class="fas  fa-mobile-alt"></i>Choisissez un restaurant</li>
+                        <li><i class="fas  fa-list-ul"></i>Composez votre menu</li>
+                        <li><i class="fas  fa-store"></i>Dégustez au restaurant</li>
+                    </ol>
+            </aside>
+             
               <Main>
                 <div class="container">
-                    <h2 id="Restaurants">Restaurants</h2>
+                    <h2 id="restaurants">Restaurants</h2>
                     <div class="restaurants-cards">
                         <div class="box-restaurant">
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="image-restaurant"/>
                             <a href="lapalettedugout.html">
-                                <h3 class="box-restaurant-title">La palette du goût</h3>
+                                <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </a> 
                             <div class="heart">  
@@ -73,7 +65,7 @@
                         <div class="box-restaurant">
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="image-restaurant"/>
                             <a href="lanoteenchantee.html">
-                                <h3 class="box-restaurant-title">La note enchantée</h3>
+                                <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </a>
                             <div class="heart">  
@@ -88,7 +80,7 @@
                         <div class="box-restaurant">
                             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" class="image-restaurant"/>
                             <a href="alafrancaise.html">    
-                                <h3 class="box-restaurant-title">À la française</h3>
+                                <h3>À la française</h3>
                                 <p>Cité Rouge</p>
                             </a>
                             <div class="heart">  
@@ -101,7 +93,7 @@
                         <div class="box-restaurant">
                             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" class="image-restaurant"/>
                             <a href="ledelicedessens.html">
-                                <h3 class="box-restaurant-title">Le délice des sens</h3>
+                                <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </a>
                             <div class="heart">  
@@ -120,12 +112,13 @@
         <footer>
             <h2>ohmyfood</h2>
 
-      <ul class="list-footer">
-        <li><div><i class="fas fa-utensils"></i>Proposer un restautant</div></li>
-        <li><div><i class="fas fa-hands-helping"></i>Devenir partenaire</div></li>
-        <li>Mentions légales</li>
-        <li><a href="mailto:contact@example.com">Contact</a></li>
-      </ul>
+      <ul>
+      <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+      <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+      <li><a href="#">Mentions légales</a></li>
+      <li><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
+     </ul>
+
     </footer>
 
       </html>
