--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home"> 
                   
               </header>
+              <div class="loading-spinner"> 
+                <span class="loader"></span>
+              </div>
               
 
               <section id="search">
