--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </div>
 
                         <div class="box-restaurant">
-                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="image-restaurant"/>
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="image-restaurant-enchantée"/>
                             <a href="lanoteenchantee.html">
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
