--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -25,7 +25,7 @@
         <main>
           <div class="restaurant-name">
           <img id="background-image" class="menu-alafrancaise" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A la française">
-          <h1 class="restaurant-title">La note enchantée</h1> 
+          <h1 class="restaurant-title">A la française</h1> 
           <div class="heart">
           <i class="far fa-heart"></i>
           </div>
