--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
                 <h2 class="search-subtitle">Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
                 <button class="search-button">Explorer nos restaurants</button>
               </section> 
-              <aside id="functionning">
+              <section id="functionning">
                 <h2>Fonctionnement</h2>
-                    <ol>
+                    <ul>
                         <li><i class="fas  fa-mobile-alt"></i>Choisissez un restaurant</li>
                         <li><i class="fas  fa-list-ul"></i>Composez votre menu</li>
                         <li><i class="fas  fa-store"></i>Dégustez au restaurant</li>
-                    </ol>
-            </aside>
+                    </ul>
+              </section>
              
               <Main>
-                <div class="container">
-                    <h2 id="restaurants">Restaurants</h2>
+                <div class="restaurants">
+                    <h2>Restaurants</h2>
                     <div class="restaurants-cards">
                         <div class="box-restaurant">
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="image-restaurant"/>
