--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -25,7 +25,7 @@
         <main>
           <div class="restaurant-name">
           <img id="background-image" class="menu-ledelicedessens" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délice des sens">
-          <h1 class="restaurant-title">La note enchantée</h1> 
+          <h1 class="restaurant-title">Le délice des sens</h1> 
             <div class="heart">
             <i class="far fa-heart"></i>
           </div>
