--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                            </div>    
                             
                         <div class="box-restaurant">
-                           <a href="lanoteenchantee.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="image-restaurant-enchantée"/>
+                           <a href="lanoteenchantee.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="image-restaurant"/>
                              <h3>La note enchantée</h3>
                              <p>Charonne</p>
                            </a>
