--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                                 <p>Ménilmontant</p>
                           </a>    
                             <div class="heart">  
-                              <i class="far  fa-heart"></i>
+                              <i class="far fa-heart heart-empty"></i>
+                              <i class="fas fa-heart heart-full"></i>
                             </div>
                             <p class="new">Nouveau</p>
                            </div>    
@@ -72,7 +73,8 @@
                              <p>Charonne</p>
                            </a>
                             <div class="heart">  
-                              <i class="far  fa-heart"></i>
+                              <i class="far fa-heart heart-empty"></i>
+                              <i class="fas fa-heart heart-full"></i>
                             </div>
                              <p class="new">Nouveau</p> 
                         </div>
@@ -83,7 +85,8 @@
                               <p>Cité Rouge</p>
                             </a>
                             <div class="heart">  
-                              <i class="far fa-heart"></i>
+                              <i class="far fa-heart heart-empty"></i>
+                              <i class="fas fa-heart heart-full"></i>
                             </div>
                         </div>
                         
@@ -93,7 +96,8 @@
                               <p>Folie-Méricourt</p>
                             </a>
                             <div class="heart">  
-                              <i class="far  fa-heart"></i>
+                              <i class="far fa-heart heart-empty"></i>
+                              <i class="fas fa-heart heart-full"></i>
                             </div>
                         </div>
                     </div>
