--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -4,7 +4,7 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="css/pages.css">
+            <link rel="stylesheet" href="css/style.css">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Shrikhand">
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
             <script src="https://kit.fontawesome.com/24283e3720.js" crossorigin="anonymous"></script>
