--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -156,12 +156,12 @@
         <footer>
           <h2>ohmyfood</h2>
 
-          <ul class="list-footer">
-            <li><div><i class="fas fa-utensils"></i>Proposer un restautant</div></li>
-            <li><div><i class="fas fa-hands-helping"></i>Devenir partenaire</div></li>
-            <li>Mentions légales</li>
-            <li><a href="mailto:contact@example.com">Contact</a></li>
-          </ul>
+          <ul>
+            <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
+           </ul>
 
 
         </footer>
