--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -30,7 +30,8 @@
               <img id="background-image" class="menu-lapalettedugout" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
               <h1 class="restaurant-title">La palette du goût</h1> 
               <div class="heart">
-              <i class="far fa-heart"></i>
+                <i class="far fa-heart heart-empty"></i>
+                <i class="fas fa-heart heart-full"></i>
             </div>
           </div>
 
