modif code coeur

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -27,7 +27,8 @@
           <img id="background-image" class="menu-alafrancaise" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A la française">
           <h1 class="restaurant-title">A la française</h1> 
           <div class="heart">
-          <i class="far fa-heart"></i>
+            <i class="far fa-heart heart-empty"></i>
+            <i class="fas fa-heart heart-full"></i>
           </div>
         </div>
 
