modif code coeur

--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -27,7 +27,8 @@
           <img id="background-image" class="menu-ledelicedessens" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délice des sens">
           <h1 class="restaurant-title">Le délice des sens</h1> 
             <div class="heart">
-            <i class="far fa-heart"></i>
+                <i class="far fa-heart heart-empty"></i>
+                <i class="fas fa-heart heart-full"></i>
           </div>
         </div>
 
