--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -45,6 +45,7 @@
                       <p class="price">25€</p>
                       <span class="checkbox"><i class="fas checkicon fa-check-circle"></i></span>
                   </div>
+              </div>
 
                   <div class="choice-2">
                     <div class="menu-content">
