--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -26,14 +26,17 @@
 
        <main>
 
-            <div class="restaurant-name">
+
               <img id="background-image" class="menu-lapalettedugout" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
+        
+            <section class="restaurant-name"></section>
               <h1 class="restaurant-title">La palette du goût</h1> 
               <div class="heart">
                 <i class="far fa-heart heart-empty"></i>
                 <i class="fas fa-heart heart-full"></i>
             </div>
-        </div>
+        </section>
+        
 
             <div class="menu-detail">
             <section class="entree">
