--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -27,7 +27,7 @@
             
             <img id="background-image" class="menu-lanoteenchantee" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée">
             
-        <section class="restaurant-name"></section>
+        <section class="restaurant-name">
             <h1 class="restaurant-title">La note enchantée</h1> 
             <div class="heart">
                 <i class="far fa-heart heart-empty"></i>
