--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -29,7 +29,7 @@
 
               <img id="background-image" class="menu-lapalettedugout" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
         
-            <section class="restaurant-name"></section>
+            <section class="restaurant-name">
               <h1 class="restaurant-title">La palette du goût</h1> 
               <div class="heart">
                 <i class="far fa-heart heart-empty"></i>
