--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
               
 
               <section id="search">
-                <form>
-                    <i class="fas fa-map-marker-alt"></i>
-                    <input class="searchfield"  type="search" placeholder="Paris, Belleville"/>
-                </form>
+                <div class="location">
+                  <i class="fas fa-map-marker-alt fa-xs"></i>
+                  <p>Paris, Belleville</p>
+              </div>
                 <h1 class="search-title">Réservez le menu qui vous convient</h1>
                 <h2 class="search-subtitle">Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
                 <button class="search-button">Explorer nos restaurants</button>
