--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Shrikhand">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
             <script src="https://kit.fontawesome.com/24283e3720.js" crossorigin="anonymous"></script>
             
             <title> Ohmyfood!</title>
