--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -18,7 +18,7 @@
         <header>
 
           <div class="back"><a href="index.html"><i class="fas arrow fa-arrow-left"></i></a></div>
-          <img src="images/logo/ohmyfood.png" alt="logo" class="logo-home"> 
+          <div class="logo-home" ><h1>Ohmyfood!</h1></div>
 
         </header>
 
