--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -18,7 +18,7 @@
         <header>
 
           <div class="back"><a href="index.html"><i class="fas arrow fa-arrow-left"></i></a></div>
-          <div class="logo-home" ><h1>Ohmyfood!</h1></div>
+          <div class="logo-home" ><h1>Ohmyfood</h1></div>
         
         </header>
 
@@ -36,7 +36,7 @@
         </section>
 
           <div class="menu-detail">
-          <section class="entree">
+          <article id="entree" class="menu">
           <h2 class="menu-title">Entrées</h2>
           <div class="choice">
               <div class="choice-1">
@@ -83,9 +83,9 @@
                   </div>
               </div>
           </div>
-        </section>
+          </article>
 
-        <section class="dish">
+        <article id="dish" class="menu">
         <h2 class="menu-title">Plats</h2>
         <div class="choice">
             <div class="choice-1">
@@ -121,9 +121,9 @@
                 </div>
             </div>
             </div>
-        </section>
+        </article>
 
-        <section class="dessert">
+        <article id="dessert" class="menu">
           <h2 class="menu-title">Desserts</h2>
           <div class="choice">
               <div class="choice-1">
@@ -159,11 +159,11 @@
                   </div>
               </div>
           </div>
-        </section>
+        </article>
           </div>
      
   
-  <button id="button-commander">Commander</button>
+        <button id="button-commander">Commander</button>
 
         </main>
 
