--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -35,7 +35,7 @@
         </section>
 
         <div class="menu-detail">
-            <article id="entree" class="menu">
+            <section id="entree" class="menu">
             <h2 class="menu-title">Entrées</h2>
             <div class="choice">
                 <div class="choice-1">
@@ -71,9 +71,9 @@
                     </div>
                 </div>
                </div>
-            </article>
+            </section>
   
-          <article id="dish" class="menu">
+          <section id="dish" class="menu">
           <h2 class="menu-title">Plats</h2>
           <div class="choice">
               <div class="choice-1">
@@ -109,9 +109,9 @@
                   </div>
               </div>
               </div>
-          </article>
+          </section>
   
-          <article id="dessert" class="menu">
+          <section id="dessert" class="menu">
             <h2 class="menu-title">Desserts</h2>
             <div class="choice">
                 <div class="choice-1">
@@ -147,7 +147,7 @@
                     </div>
                 </div>
             </div>
-          </article>
+          </section>
             </div>
 
           <button id="button-commander">Commander</button>
