--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -36,7 +36,7 @@
         </section>
 
           <div class="menu-detail">
-          <article id="entree" class="menu">
+          <section id="entree" class="menu">
           <h2 class="menu-title">Entrées</h2>
           <div class="choice">
               <div class="choice-1">
@@ -83,9 +83,9 @@
                   </div>
               </div>
           </div>
-          </article>
+          </section>
 
-        <article id="dish" class="menu">
+        <section id="dish" class="menu">
         <h2 class="menu-title">Plats</h2>
         <div class="choice">
             <div class="choice-1">
@@ -121,9 +121,9 @@
                 </div>
             </div>
             </div>
-        </article>
+        </section>
 
-        <article id="dessert" class="menu">
+        <section id="dessert" class="menu">
           <h2 class="menu-title">Desserts</h2>
           <div class="choice">
               <div class="choice-1">
@@ -159,7 +159,7 @@
                   </div>
               </div>
           </div>
-        </article>
+        </section>
           </div>
      
   
