--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -36,7 +36,7 @@
         
 
          <div class="menu-detail">
-          <article id="entree" class="menu">
+          <section id="entree" class="menu">
           <h2 class="menu-title">Entrées</h2>
           <div class="choice">
               <div class="choice-1">
@@ -72,9 +72,9 @@
                   </div>
               </div>
             </div>
-          </article>
+          </section>
 
-        <article id="dish" class="menu">
+        <section id="dish" class="menu">
         <h2 class="menu-title">Plats</h2>
         <div class="choice">
             <div class="choice-1">
@@ -110,9 +110,9 @@
                 </div>
             </div>
             </div>
-        </article>
+        </section>
 
-        <article id="dessert" class="menu">
+        <section id="dessert" class="menu">
           <h2 class="menu-title">Desserts</h2>
           <div class="choice">
               <div class="choice-1">
@@ -149,7 +149,7 @@
             </div>
           </div>
         
-        </article>
+        </section>
       </div>
    
         <button id="button-commander">Commander</button>
