--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -18,7 +18,7 @@
         <header>
 
           <div class="back"><a href="index.html"><i class="fas arrow fa-arrow-left"></i></a></div>
-          <div class="logo-home" ><h1>Ohmyfood</h1></div>
+          <div class="logo-home">Ohmyfood</div>
         
         </header>
 
