--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -170,7 +170,7 @@
        </body>
 
         <footer>
-          <h2>ohmyfood</h2>
+          <h4>ohmyfood</4>
 
           <ul>
             <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
