--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -167,10 +167,8 @@
 
         </main>
 
-       </body>
-
         <footer>
-          <h4>ohmyfood</4>
+          <h4>ohmyfood</H4>
 
           <ul>
             <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
@@ -179,5 +177,6 @@
             <li><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
            </ul>
         </footer>
+    </body>
 
-      </html>
+    </html>
