--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h2>Restaurants</h2>
                     <div class="restaurants-cards">
                         <div class="box-restaurant">
-                          <a href="lapalettedugout.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="image-restaurant"/>
+                          <a href="lapalettedugout.html"><img src="images/restaurants/la_palette_du_goût.jpg" alt="La palette du goût" class="image-restaurant"/>
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                            </a>  
@@ -71,7 +71,7 @@
 
                             
                         <div class="box-restaurant">
-                           <a href="lanoteenchantee.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="image-restaurant"/>
+                           <a href="lanoteenchantee.html"><img src="images/restaurants/la_note_enchantée.jpg" alt="La note enchantée" class="image-restaurant"/>
                              <h3>La note enchantée</h3>
                              <p>Charonne</p>
                             </a> 
@@ -83,7 +83,7 @@
                             </div>
 
                         <div class="box-restaurant">
-                            <a href="alafrancaise.html"><img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" class="image-restaurant"/>
+                            <a href="alafrancaise.html"><img src="images/restaurants/à_la_française.jpg" alt="À la française" class="image-restaurant"/>
                               <h3>À la française</h3>
                               <p>Cité Rouge</p>
                             </a>
@@ -94,7 +94,7 @@
                           </div>
                         
                         <div class="box-restaurant">
-                            <a href="ledelicedessens.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" class="image-restaurant"/>
+                            <a href="ledelicedessens.html"><img src="images/restaurants/le_délice_des_sens.jpg" alt="Le délice des sens" class="image-restaurant"/>
                               <h3>Le délice des sens</h3>
                               <p>Folie-Méricourt</p>
                             </a> 
