--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -24,7 +24,7 @@
 
         <main>
           
-          <img id="background-image" class="menu-alafrancaise" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A la française">
+          <img id="background-image" class="menu-alafrancaise" src="images/restaurants/à_la_française.jpg" alt="Restaurant A la française">
         
           <section class="restaurant-name">
         <h1 class="restaurant-title">À la française</h1> 
