--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -27,8 +27,8 @@
        <main>
 
 
-              <img id="background-image" class="menu-lapalettedugout" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût">
-        
+              <img id="background-image" class="menu-lapalettedugout" src="images/restaurants/la_palette_du_goût.jpg" alt="Restaurant La palette du goût">
+              
             <section class="restaurant-name">
               <h1 class="restaurant-title">La palette du goût</h1> 
               <div class="heart">
