--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -24,7 +24,7 @@
 
         <main>
           
-          <img id="background-image" class="menu-ledelicedessens" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délice des sens">
+          <img id="background-image" class="menu-ledelicedessens" src="images/restaurants/le_délice_des_sens.jpg" alt="Restaurant Le délice des sens">
           
           <section class="restaurant-name">
             <h1 class="restaurant-title">Le délice des sens</h1> 
